--- a/test.html
+++ b/test.html
@@ -4,15 +4,11 @@
 <title>REST Testing</title>
 </head>
 <body> 
+ 
+</p><button type="button" onclick= "myFunction()">Click herer to show IP Address</button>
+<p id="demo"></p>
 
-<label for="Fname">  Enter Text: </label>
-<input type="text" id="Fname" name="Fname"><br></br>
-
-<button type="button" onclick= "myFunction()">Sumbit</button>
-
-<p id="demo"></p><br>
-
-    <link href="style.css" rel="stylesheet">
-    <script src="new.js"></script>
+<link href="style.css" rel="stylesheet">
+<script src="script.js"></script>
 </body> 
 
