--- a/test.html
+++ b/test.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>REST Testing</title>
-</head>
-<body> 
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width", initial-scale="1.0">
+        <title>REST Testing</title>
+    </head>
+    <body> 
  
-</p><button type="button" onclick= "myFunction()">Click herer to show IP Address</button>
-<p id="demo"></p>
+        </p><button type="button" onclick= "myFunction()">Click herer to show IP Address</button>
+        <p id="demo"></p>
 
-<link href="style.css" rel="stylesheet">
-<script src="script.js"></script>
-</body> 
+        </p><button type="button" onclick= "myFunction1()">Click herer to post IP Address</button>
+        <p id="demo1"></p>
 
+        </p><button onclick= "window.print()">Print this page</button>
+        
+
+        <link href="style.css" rel="stylesheet">
+        <script src="script.js"></script>
+    </body> 
+</html>
